# optimus

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  ROADMAP_PLAN.md  changes.py  commands.md  exps.md  paper_cpu.epoch.csv  paper_cpu.step.csv  paper_cpu_v4.step.csv  rsults.md
cpu/: CMakeLists.txt  README.md  RESEARCH.md  THEORY.md  kmamba_cpu.epoch.csv  kmamba_cpu.step.csv  main.c  paper_cpu_v4_check.epoch.csv  test_grad.c  test_scan.c
cuda/: CMakeLists.txt  README.md  main.c  main.cu
cuda/data/: conversations.txt  train.txt
